--- a/GitHubSearch/src/app/app.component.css
+++ b/GitHubSearch/src/app/app.component.css
@@ -2,7 +2,7 @@
     display: block;
     width: 100%;
     height: 100vh;
-    background-color: rgb(83, 45, 45);
+    background-color: white;
 }
 
 header {
