--- a/GitHubSearch/src/app/components/form-fields/repo/repo.component.html
+++ b/GitHubSearch/src/app/components/form-fields/repo/repo.component.html
@@ -1,4 +1,10 @@
-<div>
+<div class="desc">
+    <a target="_blank" href="{{repo.html_url}}">
+        <h3>{{repo.name}}</h3>
+    </a>
+    Description: {{repo.description}}
 
+</div>
+<div>ashish
 
 </div>
